 - Moved Service and subclasses to new org.restlet.service package.
 - Renamed RedirectRestlet into org.restlet.Redirector.
 - Renamed ExtractFilter into org.restlet.Extractor.
 - Renamed TunnelFilter into org.restlet.Tunnel.
 - Refactor data model of StringTemplate. New org.restlet.util.DataModel added, Model, ReadableModel and WritableModel removed.

[Other changes] 
 - Reorganized Javadocs into three parts: Restlet API, Restlet Extensions, Noelios Restlet Engine.
 - Added JSON library as an external plugin project. See http://www.json.org
 - Added org.restlet.ext.json extension to manipulate JSON representations.
 - Added MediaType.APPLICATION_JSON and added entry for "*.json" in common extensions.
 - Now adds the mandatory "Date" header to all responses.
 - Added modifiable "identifier" and "secret" properties to ChallengeResponse, in addition to the raw "credentials" property.
 - Added support for Amazon Web Services authentication scheme for HTTP client requests. Added ChallengeScheme.HTTP_AWS constant and
   a sample example at com.noelios.restlet.example.misc.AwsTest. Suggested by Mikkel Jensen.
 - StatusService now has its "overwrite" property set to "false" by default.
 - Now the StatusService (and associated StatusFilter classes) also catch unhandled Errors. Suggested by Vincent Lari.
 - Added createStatusFilter and createLogFilter to NRE's ApplicationHelper and ContainerHelper to allow overriding. Reported by Vincent Lari.
 - Added workaround for AWS authentication caused by HttpUrlConnection in JDK < 1.6 causing sending of "application/x-www-form-urlencoded" content type.
 - The SPI mechanism now uses the classloader of the Factory's class. get/setClassLoader() methods also added. Suggested by Kabe.
 - Made package org.restlet.spi visible like other JDK's SPI packages
 - Moved interfaces from org.restlet.util to org.restlet.spi. Shouldn't impact user code at all.