@@ -176,10 +176,10 @@ public class DecoderRepresentation extends WrapperRepresentation
 	}
 
 	/**
-	 * Converts the representation to a string.
-	 * @return The representation as a string.
+	 * Converts the representation to a string value.
+	 * @return The representation as a string value.
 	 */
-	public String toString()
+	public String getValue()
 	{
 		String result = null;
 
@@ -195,7 +195,7 @@ public class DecoderRepresentation extends WrapperRepresentation
 		}
 		else
 		{
-			result = getWrappedRepresentation().toString();
+			result = getWrappedRepresentation().getValue();
 		}
 
 		return result;
