@@ -33,8 +33,8 @@ import org.restlet.spi.Factory;
 import org.restlet.spi.Helper;
 
 /**
- * Restlet deployable into containers. Applications are guaranteed to receive calls with their base reference
- * set relatively to the virtual host that served them. This class is both a descriptor able to create the 
+ * Restlet deployable into Containers. Applications are guaranteed to receive calls with their base reference
+ * set relatively to the VirtualHost that served them. This class is both a descriptor able to create the 
  * root Restlet and the actual Restlet that can be attached to one or more VirtualHost instances.   
  * @author Jerome Louvel (contact@noelios.com) <a href="http://www.noelios.com/">Noelios Consulting</a>
  */
