@@ -35,8 +35,8 @@ import org.restlet.spi.Helper;
 import org.restlet.spi.VirtualClient;
 
 /**
- * Connector acting as a generic client. It internally uses one of the available connectors registered with the current
- * Restlet implementation.
+ * Connector acting as a generic client. It internally uses one of the available connectors registered 
+ * with the current Restlet implementation.
  * @author Jerome Louvel (contact@noelios.com) <a href="http://www.noelios.com/">Noelios Consulting</a>
  */
 public class Client extends Connector implements VirtualClient
