@@ -28,13 +28,15 @@ import java.util.List;
 import org.restlet.data.Protocol;
 
 /**
- * Restlet enabling communication between components. "A connector is an abstract
- * mechanism that mediates communication, coordination, or cooperation among components. Connectors enable
- * communication between components by transferring data elements from one interface to another without
- * changing the data." Roy T. Fielding </br> "Encapsulate the activities of accessing resources and
- * transferring resource representations. The connectors present an abstract interface for component
- * communication, enhancing simplicity by providing a clean separation of concerns and hiding the underlying
- * implementation of resources and communication mechanisms" Roy T. Fielding
+ * Restlet enabling communication between Components. "A connector is an abstract mechanism that mediates 
+ * communication, coordination, or cooperation among components. Connectors enable communication between 
+ * components by transferring data elements from one interface to another without changing the data." 
+ * Roy T. Fielding</br>
+ * <br/>
+ * "Encapsulate the activities of accessing resources and transferring resource representations. The 
+ * connectors present an abstract interface for component communication, enhancing simplicity by providing 
+ * a clean separation of concerns and hiding the underlying implementation of resources and communication 
+ * mechanisms" Roy T. Fielding
  * @see <a href="http://www.ics.uci.edu/~fielding/pubs/dissertation/software_arch.htm#sec_1_2_2">Source
  * dissertation</a>
  * @see <a href="http://www.ics.uci.edu/~fielding/pubs/dissertation/rest_arch_style.htm#sec_5_2_2">Source
