@@ -34,9 +34,9 @@ import org.restlet.data.Status;
 import org.restlet.util.CallModel;
 
 /**
- * Filter extracting some attributes from a request. Multiple extractions can be defined, based on the query 
- * string of the resource reference, on the request form (posted from a browser), on the context URI matches 
- * or on the request's template model.
+ * Filter extracting some attributes from a call. Multiple extractions can be defined, based on the query 
+ * string of the resource reference, on the request form (posted from a browser), on the base URI matches 
+ * or on the request or response data model.
  * @author Jerome Louvel (contact@noelios.com) <a href="http://www.noelios.com/">Noelios Consulting</a>
  */
 public class Extractor extends Filter
