@@ -32,8 +32,8 @@ import org.restlet.spi.Factory;
 import org.restlet.spi.Helper;
 
 /**
- * Connector acting as a generic server. It internally uses one of the available connectors registered with the current
- * Restlet implementation.
+ * Connector acting as a generic server. It internally uses one of the available connectors registered 
+ * with the current Restlet implementation.
  * @author Jerome Louvel (contact@noelios.com) <a href="http://www.noelios.com/">Noelios Consulting</a>
  */
 public class Server extends Connector
